[project]
name = "heic-conversor"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Candiago",email = "lucas.candiago@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow (>=11.2.1,<12.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
